# airbyte-agent-connectors

./: README.md  pyproject.toml
.github/workflows/: generate-skills.yml
airbyte-agent-mcp/: CHANGELOG.md  pyproject.toml
airbyte-agent-mcp/airbyte_agent_mcp/: mcp_server.py
airbyte-agent-mcp/airbyte_agent_mcp/_vendored/connector_sdk/executor/: local_executor.py
airbyte-agent-mcp/airbyte_agent_mcp/_vendored/connector_sdk/schema/: operations.py
airbyte-agent-mcp/tests/: test_mcp_server.py
connectors/airtable/: CHANGELOG.md  README.md  pyproject.toml
connectors/airtable/airbyte_agent_airtable/: __init__.py  connector.py  connector_model.py  models.py
connectors/amazon-ads/: CHANGELOG.md  README.md  pyproject.toml
connectors/amazon-ads/airbyte_agent_amazon_ads/: connector.py  connector_model.py
connectors/amazon-seller-partner/: CHANGELOG.md  README.md  pyproject.toml
connectors/amazon-seller-partner/airbyte_agent_amazon_seller_partner/: __init__.py  connector.py  connector_model.py  models.py  types.py
connectors/amplitude/: CHANGELOG.md  README.md  pyproject.toml
connectors/asana/: CHANGELOG.md  README.md  pyproject.toml
connectors/ashby/: CHANGELOG.md  README.md  pyproject.toml
connectors/chargebee/: CHANGELOG.md  README.md  pyproject.toml
connectors/clickup/: CHANGELOG.md  pyproject.toml
connectors/clickup-api/: CHANGELOG.md  README.md  pyproject.toml
connectors/confluence/: CHANGELOG.md  README.md  pyproject.toml
connectors/facebook-marketing/: CHANGELOG.md  README.md  pyproject.toml
connectors/freshdesk/: CHANGELOG.md  README.md  pyproject.toml
connectors/github/: CHANGELOG.md  README.md  pyproject.toml
connectors/gitlab/: CHANGELOG.md  README.md  pyproject.toml
connectors/gmail/: CHANGELOG.md  README.md  pyproject.toml
connectors/gong/: CHANGELOG.md  README.md  pyproject.toml
connectors/google-ads/: CHANGELOG.md  README.md  pyproject.toml
connectors/google-analytics-data-api/: CHANGELOG.md  README.md  pyproject.toml
connectors/google-drive/: CHANGELOG.md  README.md  pyproject.toml
connectors/google-search-console/: CHANGELOG.md  README.md  pyproject.toml
connectors/granola/: CHANGELOG.md  README.md  pyproject.toml
connectors/greenhouse/: CHANGELOG.md  README.md  pyproject.toml
connectors/harvest/: CHANGELOG.md  pyproject.toml
connectors/hubspot/: CHANGELOG.md  README.md  pyproject.toml
connectors/incident-io/: CHANGELOG.md  README.md  pyproject.toml
connectors/intercom/: CHANGELOG.md  README.md  pyproject.toml
connectors/jira/: CHANGELOG.md  README.md  pyproject.toml
connectors/klaviyo/: CHANGELOG.md  README.md  pyproject.toml
connectors/linear/: CHANGELOG.md  README.md  pyproject.toml
connectors/linkedin-ads/: CHANGELOG.md  README.md  pyproject.toml
connectors/mailchimp/: CHANGELOG.md  README.md  pyproject.toml
connectors/monday/: CHANGELOG.md  README.md  pyproject.toml
connectors/notion/: CHANGELOG.md  README.md  pyproject.toml
connectors/orb/: CHANGELOG.md  README.md  pyproject.toml
connectors/paypal-transaction/: CHANGELOG.md  README.md  pyproject.toml
connectors/pinterest/: CHANGELOG.md  README.md  pyproject.toml
connectors/pylon/: CHANGELOG.md  README.md  pyproject.toml
connectors/salesforce/: CHANGELOG.md  README.md  pyproject.toml
connectors/sendgrid/: CHANGELOG.md  README.md  pyproject.toml
connectors/sentry/: CHANGELOG.md  README.md  pyproject.toml
connectors/shopify/: CHANGELOG.md  README.md  pyproject.toml
connectors/slack/: CHANGELOG.md  README.md  pyproject.toml
connectors/snapchat-marketing/: CHANGELOG.md  README.md  pyproject.toml
connectors/stripe/: CHANGELOG.md  README.md  pyproject.toml
connectors/tiktok-marketing/: CHANGELOG.md  README.md  pyproject.toml
connectors/twilio/: CHANGELOG.md  README.md  pyproject.toml
connectors/typeform/: CHANGELOG.md  README.md  pyproject.toml
connectors/woocommerce/: CHANGELOG.md  README.md  pyproject.toml
connectors/zendesk-chat/: CHANGELOG.md  README.md  pyproject.toml
connectors/zendesk-support/: CHANGELOG.md  README.md  pyproject.toml
connectors/zendesk-talk/: CHANGELOG.md  README.md  pyproject.toml
connectors/zoho-crm/: CHANGELOG.md  README.md  pyproject.toml
scripts/: README-generate-skill-references.md  RISKS.md  generate_skill_references.py  release_info.py
skills/airbyte-agent-connectors/: README.md  SKILL.md
src/airbyte_agent_connectors/: __init__.py  base.py
tests/: conftest.py  test_generate_skill_references.py
(+351 files in other folders)
