[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airbyte-agent-connectors"
version = "0.1.0"
description = "AI agent connectors for Airbyte — tools and skills for interacting with Airbyte APIs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Airbyte", email = "contact@airbyte.io" },
]
keywords = ["airbyte", "connectors", "ai", "agent", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/airbytehq/airbyte-agent-connectors"
Repository = "https://github.com/airbytehq/airbyte-agent-connectors"
Issues = "https://github.com/airbytehq/airbyte-agent-connectors/issues"

[project.scripts]
airbyte-agent = "airbyte_agent_connectors.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/airbyte_agent_connectors"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# Relaxing strict mode for personal exploration — too noisy during prototyping
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov flags so quick test runs don't require coverage overhead locally
# Added --tb=short to get more useful tracebacks without the full wall of text
# Removed -x (stop on first failure) — prefer seeing all failures at once when exploring
addopts = "-v --tb=short"
