[project]
name = "airbyte-agent-mcp"
version = "0.1.144"
description = "MCP server for Airbyte connectors - connect AI assistants to 500+ data sources"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Airbyte", email = "contact@airbyte.io" }]
keywords = ["airbyte", "mcp", "model-context-protocol", "ai", "claude", "data-integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.42.0",
    "fastmcp>=3.0.0b1",
    "pydantic-ai-slim[anthropic,fastmcp]>=0.1.0",
    "filetype>=1.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/airbytehq/airbyte-agent-connectors"
Documentation = "https://github.com/airbytehq/airbyte-agent-connectors#readme"
Repository = "https://github.com/airbytehq/airbyte-agent-connectors"
Issues = "https://github.com/airbytehq/airbyte-agent-connectors/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
prerelease = "if-necessary-or-explicit"

[dependency-groups]
dev = [
    "poethepoet>=0.40.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.14",
]

[project.scripts]
adp = "airbyte_agent_mcp.cli:main"

[tool.poe.tasks]
test = "python -m pytest tests/ -v"
[tool.poe.tasks.format]
sequence = ["format-code", "format-fix"]
[tool.poe.tasks.format-code]
cmd = "ruff format ."
[tool.poe.tasks.format-fix]
cmd = "ruff check --fix ."
[tool.poe.tasks.check]
sequence = ["check-lint", "check-types"]
[tool.poe.tasks.check-lint]
cmd = "ruff check ."
[tool.poe.tasks.check-types]
cmd = "ty check"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ty]
# ty is configured to be strict by default
